SERVER-60606 Abort index builds conflicting with emptycapped during initial sync

(cherry picked from commit a4ad66c348822a19bbad38fb8485edd884b89a1a)